--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   "testPath": "src/test/javascript/spec",
   "dependencies": {
     "angular": "1.4.4",
+    "angular-animate": "~1.4.6",
     "angular-bootstrap": "0.13.3",
     "angular-bootstrap-datetimepicker-directive": "~0.1.3",
     "angular-cache-buster": "0.4.3",
