--- a/bower.json
+++ b/bower.json
@@ -27,9 +27,11 @@
     "json3": "3.3.2",
     "modernizr": "2.8.3",
     "moment": "~2.10.6",
+    "ng-camera": "~0.1.3",
     "ng-file-upload": "5.0.9",
     "ngInfiniteScroll": "1.2.0",
-    "swagger-ui": "2.1.1"
+    "swagger-ui": "2.1.1",
+    "webcamjs": "~1.0.4"
   },
   "devDependencies": {
     "angular-mocks": "1.4.4",
