--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "ng-camera": "~0.1.3",
     "ng-file-upload": "5.0.9",
     "ngInfiniteScroll": "1.2.0",
+    "signature_pad": "~1.5.0",
     "swagger-ui": "2.1.1",
     "webcamjs": "~1.0.4"
   },
