--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "ng-file-upload": "5.0.9",
     "ngInfiniteScroll": "1.2.0",
     "signature_pad": "~1.5.0",
+    "smartJQueryZoom-test": "~1.1.4",
     "swagger-ui": "2.1.1",
     "webcamjs": "~1.0.4"
   },
